fixed dp alignment

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -38,6 +38,7 @@ nav {
     align-items: center;
     flex-direction: row;
     margin-bottom: 3px;
+    align-items: flex-start;
 
 }
 
